# AirAccount

./: .dockerignore  .gitignore  .gitmodules  5_STAGE_TEST_COMPLETE_REPORT.md  AirAccount-TEE-Plan.md  CLAUDE.md  Cargo.toml  DATABASE_UNIFICATION_GUIDE.md  Deploy.md  Deploy_zh.md  Dockerfile.basic-test  Dockerfile.kms-optee  Dockerfile.kms-passkey-qemu  Dockerfile.kms-passkey-test  Dockerfile.optee  Dockerfile.p256-test  Dockerfile.qemu-tee  Dockerfile.rust-kms  Dockerfile.ta-ca-build  FINAL_PROJECT_STATUS.md  FINAL_TEST_STATUS.md  GEMINI.md  INTEGRATION_TEST_REPORT.md  NOTICE  README.md  TA_CA_BUILD_STATUS.md  TODO_OPTEE_INTEGRATION.md  build_tee.sh  changes.md  check-all-nodes.sh  check-imx93-alive.sh  cleanup-gap-keys.sh  cleanup_rust_cache.sh  connect-imx93.sh  crates  deny.toml  deploy-kms.sh  docker-compose.tee.yml  fly.sh  full-test-result-3-3-2026.md  (+33 more)
.cargo/: config.toml
.github/: CODEOWNERS
backup/kms_20250929_130024/bak/tee-validation/: Cargo.toml
backup/kms_20250929_130024/bak/tee-validation/src/: main.rs
backup/kms_20250929_130024/kms-api/: Cargo.toml
backup/kms_20250929_130024/kms-api/src/: kms.rs  ta_client.rs  types.rs
backup/kms_20250929_130024/kms-core/: Cargo.toml
backup/kms_20250929_130024/kms-core/src/: crypto.rs  error.rs  types.rs
backup/kms_20250929_130024/kms-host/: Cargo.toml
backup/kms_20250929_130024/kms-ta-test/: Cargo.toml
backup/kms_20250929_130024/kms-ta-test/src/: main.rs  mock_tee.rs
config/: development.conf
demo-real/: index.html  package-lock.json  package.json  simple-webauthn-test.html  vite.config.ts
docker/: DOCKER_ORGANIZATION.md  Dockerfile.optee  Dockerfile.stm32-builder  README.md
docs/: 2025-01-17-bugs.md  API_Refactoring_Plan.md  AirAccount_Business_Architecture.md  AirAccount_Comprehensive_PRD_2025.md  Architecture_Integration_Strategy.md  BACKUP_README.md  BETA-REVIEW.md  CA_TA_COMMUNICATION_FIX.md  CLAUDE.md  Changes.md  Cloudflare-Tunnel-Troubleshooting.md  Code_Comparison_Analysis.md  Comprehensive_Test_Plan.md  Deploy.md  Deploy_zh.md  ETH_Wallet_Analysis_Report.md  ETH_Wallet_Deep_Analysis.md  Enable-Real-Logging.md  Enhanced-KMS-API-Design.md  FINAL_PROJECT_STATUS.md  FINAL_STATUS_REPORT.md  FINAL_TEST_STATUS.md  KMS-API-DOCUMENTATION.md  KMS-README.md  (+105 more)
kms/: CHANGELOG.md  CODE_REVIEW.md  Cargo.toml  DK2-dev.md  Makefile  QEMU-deploy.md  README-Passkey-Docker.md  README.md  e2e-test.py  start-kms.md  test-full-api.sh  uuid.txt
kms/bak/: verify_signature.py
kms/bak/kms-optee-example/proto/: Cargo.toml
kms/bak/kms-optee-example/proto/src/: lib.rs
kms/bak/kms-optee-example/ta/: Cargo.toml
kms/bak/kms-test/: Cargo.toml  hash.rs  mock_tee.rs  wallet.rs
kms/deploy/: aastar-node-installer.sh  build-airaccount-node.sh  community.toml.example  deploy-dvt.sh  dvt-unlock.sh
kms/deploy/community-profiles/: README.md  profile-combined.toml  profile-dvt-only.toml  profile-kms-only.toml
kms/deploy/dk2-node2/: README.md  dk2-serial.py  dk2-wifi-school.sh  dk2.sh  wifi-autoconnect.service  wifi-up.sh
kms/deploy/mx93/: dirf-repair.service  kms-api.service  kms.env.example
kms/deploy/topology-aastar-3node/: README.md  node1-school-mx93.toml  node2-school-dk2.toml  node3-home-mx93.toml
kms/docs/: API-TEST-MATRIX.md  BACKUP-GUIDE.md  BACKUP.md  BETA3-PLAN.md  BUILD-MX93.md  MX93-FIELD-GUIDE.md  PRODUCTION_READINESS.md  RELEASE-CHECKLIST.md  RELEASE-PLAN.md  SECURITY-AUDIT-2026-06-11.md  community-node-image-ci-design.md  community-node-kit-design.md  community-node-register-modelB-funding-service.md  community-node-register-modelC-sp-gasless-plan.md  community-node-topology.md  community-onboarding-program.md  deploy-runbook-3node.md  dvt-tee-bls-custody-design.md  dvt3-independent-node-onboarding.md  go-live-dvt3-dk2-plan.md  kms-dvt-imx93-baseline.md  kms-dvt-imx93-deploy.md  kms-dvt-production-init.md  phase2-image.md  release-structure.md  secp256k1-hardware-analysis.md  testnet-to-prod-switch.md
kms/docs/api/: index.html  openapi.yaml
kms/docs/out-of-band-console/: README.md  mac-mini-console-board-a.sh  mac-mini-console-board-b.sh
kms/docs/test-vectors/: commitment-vectors.json  compute_vectors.py
kms/host/: Cargo.toml  Makefile  attestation-measurements-proof.json  attestation-measurements.json  deny.toml  kms-test-page.html  sigsum-policy
kms/host/.cargo/: config.toml
kms/host/src/: address_cache.rs  agent_jwt.rs  api.rs  api_server.rs  cli.rs  db.rs  lib.rs  main.rs  rate_limit.rs  ta_client.rs  tests.rs  webauthn.rs
kms/kms-api/: Cargo.toml
kms/kms-api/src/: main.rs  simple_kms.rs  types.rs
kms/kms-core/src/: lib.rs
kms/kms-host/: Cargo.toml
kms/kms-host/src/: main.rs
kms/kms-optee-example/: Makefile
kms/kms-optee-example/host/: Cargo.toml
kms/kms-optee-example/ta/: build.rs
kms/kms-simple-ta/: Cargo.toml
kms/kms-simple-ta/src/: main.rs
kms/kms-ta/: Cargo.toml
kms/kms-ta-test/src/: wallet.rs
kms/kms-test/: Cargo.toml
kms/node-setup/: README.md  aastar-kms-selfinit.service  aastar-kms-selfinit.sh  aastar-node-setup.service  aastar-node-setup.sudoers  build-register-bundle.sh  finalize-helper.sh  register-node.mjs  setup-server.py  setup.html  test_setup_server.py
kms/passkey-test/: Cargo.toml
kms/passkey-test/src/: main.rs
kms/portal/: README.md  index.html
kms/proto/: Cargo.toml
kms/proto/src/: in_out.rs  lib.rs
kms/scripts/: backup-restore.sh  backup.sh  build.sh  deploy.sh  install-backup-timer.sh  register-bls-node.sh  run-all-tests.sh  stats.sh
kms/ta/: Cargo.toml  Makefile  Xargo.toml  aarch64-unknown-optee.json  build.rs  fix_ta_elf.py  p256-m.c
kms/ta/.cargo/: config.toml
kms/ta/src/: attestation.rs  bip32_secp.rs  bls.rs  bls_spike.rs  challenge.rs  eip712.rs  lib.rs  main.rs  passkey.rs  wallet.rs
kms/test/: README.md  kms-test-page.html  p256_helper.py  perf-test.sh  run-api-tests.sh  run-full-e2e.sh  run-host-unit-tests.sh  test-freeze-unfreeze.sh  test-p256-session-key-v0181.sh  test-replay.sh  test-session-key-v0172.sh  walkthrough-test.py
kms/test/test-fixtures/: transactions.json  user1.json  user2.json  user3.json
(+253 files in other folders)
