[package]
name = "kms-api-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kms-api-server"
path = "kms_api_server.rs"

[dependencies]
# Web框架
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 实用工具
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

# 日志
env_logger = "0.10"
log = "0.4"

# TEE/OP-TEE 集成 (可选依赖)
optee-teec = { version = "0.5", optional = true }
num_enum = { version = "0.7", optional = true }
bincode = { version = "1.3", optional = true }
hex = { version = "0.4", optional = true }

[features]
default = ["ta_integration"]

# TA 集成功能（真实eth_wallet TA）
ta_integration = ["optee-teec", "num_enum", "bincode", "hex"]