# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "kms"
version = "0.23.2"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/teaclave-trustzone-sdk.git"
description = "KMS (Key Management Service) based on OP-TEE TrustZone."
edition = "2018"

[[bin]]
name = "kms-api-server"
path = "src/api_server.rs"

[[bin]]
name = "export_key"
path = "src/bin/export_key.rs"
required-features = ["export-secrets"]

[[bin]]
name = "api-key"
path = "src/bin/api_key.rs"

[[bin]]
name = "kms-admin"
path = "src/bin/kms_admin.rs"

[features]
default = ["tee"]
tee = ["optee-teec"]
# DEV/TEST ONLY — gates mnemonic export and passkey-less ExportPrivateKey CLI.
# Never enable in production builds or CI release pipelines.
export-secrets = []
# DEV/TEST ONLY — gates the /admin/purge-key endpoint (passkey-less force-delete
# using KMS_ADMIN_TOKEN). AirAccount is a decentralized KMS: production/release
# builds MUST NOT contain any admin/super-user surface, so this is OFF by default
# and the endpoint is not compiled into the binary at all. Enable only for
# beta/test builds: `cargo build --features admin-purge`.
# Never enable in production builds or CI release pipelines.
admin-purge = []

[dependencies]
proto = { path = "../proto" }
optee-teec = { path = "../../third_party/teaclave-trustzone-sdk/optee-teec", optional = true }

# CLI dependencies
structopt = "0.3"
bincode = "1.3.3"
anyhow = "1.0"
uuid = { version = "1.8", features = ["serde", "v4"] }
hex = { version = "0.4", features = ["serde"] }

# API server dependencies (compatible with Rust 1.80)
tokio = { version = "1.38", features = ["full"] }
warp = "0.3.6"
bytes = "1.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
chrono = { version = "0.4.35", features = ["serde"] }
env_logger = "0.10.2"
log = "0.4.21"
num_enum = "0.7.3"
base64 = "0.21"
p256 = { version = "0.13", features = ["ecdsa"] }
rand = { version = "0.8", features = ["std"] }
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
ciborium = "0.2"

# Pinned transitive dependencies for Rust 1.80 compatibility (no edition2024)
idna = "=0.5.0"
url = "=2.5.0"
base64ct = "=1.6.0"
half = "=2.4.1"

[profile.release]
lto = true
