[package]
name = "kms-api"
version = "0.1.0"
edition = "2021"
description = "JSON-RPC API for KMS services compatible with AWS KMS"

[dependencies]
# Core KMS functionality
proto = { path = "../proto" }
anyhow = "1.0"
uuid = { version = "1.8", features = ["serde", "v4"] }
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
rand = "0.8"

# Crypto dependencies
secp256k1 = "0.27.0"
sha3 = "0.10.6"
bip32 = { version = "0.3.0", features = ["bip39"]}
ethereum-tx-sign = "6.1.3"
bincode = "1.3.3"

# Web server
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "kms-server"
path = "src/main.rs"