# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "kms-ta"
version = "0.1.0"
authors = ["KMS Contributors"]
license = "Apache-2.0"
description = "KMS Trusted Application based on eth_wallet."
edition = "2021"

[dependencies]
proto = { path = "../proto" }
optee-utee-sys = { path = "../../third_party/incubator-teaclave-trustzone-sdk/optee-utee/optee-utee-sys" }
optee-utee = { path = "../../third_party/incubator-teaclave-trustzone-sdk/optee-utee" }
secure_db = { path = "../../third_party/incubator-teaclave-trustzone-sdk/crates/secure_db" }

anyhow = "1.0"
uuid = { version = "1.8", default-features = false }
bip32 = { version = "0.3.0", features = ["bip39"]}
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10.6"
secp256k1 = "0.27.0"
ethereum-tx-sign = "6.1.3"
bincode = "1.3.3"

[build-dependencies]
uuid = { version = "1.8", default-features = false }
proto = { path = "../proto" }
optee-utee-build = { path = "../../third_party/incubator-teaclave-trustzone-sdk/optee-utee-build" }

[profile.release]
lto = false
opt-level = 3