[package]
name = "passkey-test"
version = "0.1.0"
edition = "2021"

[dependencies]
p256 = { version = "=0.11.1", features = ["ecdsa"], default-features = false }
ecdsa = "=0.14.8"
sha2 = "=0.10.6"
hex = "=0.4.3"
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "=1.0.115"
anyhow = "=1.0.81"
rand_core = { version = "=0.6.4", features = ["getrandom"] }
