# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "ta"
version = "0.8.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/teaclave-trustzone-sdk.git"
description = "An example of Ethereum wallet TA."
edition = "2018"

[features]
# DEV/TEST ONLY — never enable in production builds.
# Allows mnemonic export from CreateWallet and passkey-less ExportPrivateKey.
export-secrets = []

# DEV/TEST ONLY — never enable on a production board.
# Makes the TA accept WebAuthn assertions whose rpId is "localhost" (i.e.
# SHA-256("localhost")) IN ADDITION to "aastar.io", so a locally served dev
# frontend can exercise the real TA. This is the single rpId-scope difference
# between the production TA (aastar.io only) and the test TA. Pair with the CA
# `dev-rpid` feature. Production/release builds MUST be built WITHOUT it.
dev-rpid = []

# Storage backend selector. When enabled, the TA uses REE-FS
# (TEE_STORAGE_PRIVATE) for all wallet storage and skips every RPMB operation
# entirely — no anti-rollback counter, no RPMB migration. Use this on hardware
# whose eMMC RPMB authentication key is NOT programmed (e.g. NXP FRDM-IMX93 out
# of the box), where any RPMB access faults/kills the TA. When the RPMB key is
# programmed in production (issue #50), build WITHOUT this feature to get
# hardware anti-rollback. Default (feature off) = RPMB, matching PR#47.
ree-fs-only = []

# Issue #63: WebAuthn challenge-binding enforcement mode.
# Off (default) = TRANSITION: assertions without clientDataJSON fall through to
#   the legacy ECDSA-only path (with a warning). Keeps not-yet-migrated clients
#   working. Assertions WITH clientDataJSON are ALWAYS strictly verified.
# On = STRICT: every assertion MUST carry clientDataJSON and pass TA-issued
#   nonce binding (closes the legacy assertion-replay backdoor, V2). Build the
#   strict image ONLY after all clients use the GetChallenge + payload-commitment
#   ceremony (SDK-side; see aastar-sdk PR #131 follow-up), else not-yet-migrated
#   clients are rejected. KMS flip tracked in #63 (umbrella #99). Mainnet target.
strict-challenge = []

[dependencies]
libc = { path = "../../../../rust/libc" }
proto = { path = "../proto" }
optee-utee-sys = { path = "../../../../optee-utee/optee-utee-sys", features = ["std"] }
optee-utee = { path = "../../../../optee-utee", features = ["std"] }
secure_db = { path = "../../../../crates/secure_db" }

anyhow = "1.0"
uuid = { version = "=1.11.0", default-features = false }
bip32 = { version = "0.3.0", features = ["bip39"]}
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
sha3 = "0.10.6"
hmac = "0.12"
secp256k1 = "0.27.0"
sha2 = { version = "0.10", default-features = false }
# p256 removed — P-256 ECDSA now uses OP-TEE native TEE_AsymmetricVerifyDigest
# Pin transitive deps to versions compatible with nightly-2024-05-15 (no edition2024)
base64ct = { version = "=1.6.0", features = ["std"] }
ethereum-tx-sign = "6.1.3"
bincode = "1.3.3"

[build-dependencies]
uuid = { version = "=1.11.0", default-features = false }
proto = { path = "../proto" }
optee-utee-build = { path = "../../../../optee-utee-build" }
cc = "1.0"

[profile.release]
lto = false
opt-level = 3
