[package]
name = "kms-api"
version = "0.1.0"
edition = "2021"
description = "JSON-RPC API for KMS services compatible with AWS KMS"

[dependencies]
# Core KMS functionality
proto = { path = "../proto" }
anyhow = "1.0"
uuid = { version = "1.8", features = ["serde", "v4"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
rand = "0.8"

# TA Integration dependencies
optee-teec = { path = "../../../third_party/incubator-teaclave-trustzone-sdk/optee-teec" }
bincode = "1.3.3"
# Remove all independent crypto - ONLY use eth_wallet TA

# Web server
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "kms-server"
path = "src/main.rs"