# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "kms-host"
version = "0.1.0"
authors = ["KMS Contributors"]
license = "Apache-2.0"
description = "KMS Host application based on eth_wallet."
edition = "2021"

[dependencies]
kms-core = { path = "../kms-core", features = ["std"] }
proto = { path = "../proto" }
optee-teec = { path = "../../third_party/incubator-teaclave-trustzone-sdk/optee-teec" }

structopt = "0.3"
bincode = "1.3.3"
anyhow = "1.0"
uuid = { version = "1.8", features = ["serde"] }
hex = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "kms-cli"
path = "src/main.rs"

[[bin]]
name = "eth-wallet-cli"
path = "src/cli.rs"

[profile.release]
lto = true