[package]
name = "kms-ta-test"
version = "0.1.0"
edition = "2021"

[dependencies]
# Include the original TA modules (without TEE dependencies for testing)
anyhow = "1.0"
uuid = { version = "1.8", default-features = false }
bip32 = { version = "0.3.0", features = ["bip39"]}
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10.6"
secp256k1 = "0.27.0"
ethereum-tx-sign = "6.1.3"
bincode = "1.3.3"
proto = { path = "../proto" }

# Mock TEE environment for testing
thiserror = "1.0"

[[bin]]
name = "test_wallet"
path = "src/main.rs"